# defi-tracker-lifecycle

./: .gitignore  CLAUDE.md  Cargo.toml  FOR_USER.md  LICENSE  README.md  lifecycle-explorer.html
.github/workflows/: deploy.yml
docs-site/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs-site/src/: App.tsx  index.css  main.tsx
docs-site/src/components/: Hero.tsx  JsonClassifier.tsx  Navbar.tsx  QuickStart.tsx  Section.tsx  VariantLookup.tsx
docs-site/src/components/architecture/: Architecture.tsx  TestPyramid.tsx
docs-site/src/components/explorer/: CurrentStateBar.tsx  EventButtons.tsx  EventLog.tsx  Explorer.tsx  PresetBar.tsx  ProtocolSelector.tsx  SnapshotDelta.tsx  StateDiagram.tsx
docs-site/src/components/pipeline/: PipelineStep.tsx  PipelineVisualizer.tsx
docs-site/src/components/reference/: MappingTable.tsx  ProtocolReference.tsx
docs-site/src/data/: presets.ts  protocols.ts  stateMachine.ts
docs-site/src/engine/: classifier.ts  eventMapping.ts  lifecycle.ts  lookup.ts  wasm.ts
docs-site/src/hooks/: useLifecycleState.ts
scripts/: coverage.sh  test.sh
src/: error.rs  lib.rs  types.rs  wasm.rs
src/lifecycle/: adapters.rs  mapping.rs  mod.rs
src/protocols/: dca.rs  kamino.rs  limit_v1.rs  limit_v2.rs  mod.rs
tests/: adapter_fixtures.rs
tests/fixtures/: dca_events.json  dca_instructions.json  kamino_events.json  kamino_instructions.json  limit_v1_events.json  limit_v1_instructions.json  limit_v2_events.json  limit_v2_instructions.json
