[package]
name = "defi-tracker-lifecycle"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
uninlined_format_args = "warn"
return_self_not_must_use = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"
match_same_arms = "allow"
unused_async = "allow"
manual_let_else = "allow"
used_underscore_binding = "allow"
ref_option_ref = "allow"
ref_option = "allow"
format_push_string = "allow"
case_sensitive_file_extension_comparisons = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
no_effect_underscore_binding = "allow"
redundant_closure_for_method_calls = "allow"
wildcard_imports = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
allow_attributes_without_reason = "deny"
result_large_err = "allow"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
carbon-jupiter-dca-decoder = "0.12"
carbon-jupiter-limit-order-decoder = "0.12"
carbon-jupiter-limit-order-2-decoder = "0.12"
carbon-kamino-limit-order-decoder = "0.12"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-for-all",
]
